<resources>
    <string name="close">关闭</string>
    <string name="cm_loading">正在加载中···</string>

    <!--刷新-->
    <string name="cube_views_load_more_click_to_load_more">点击加载更多</string>
    <string name="cube_views_load_more_error">加载失败,点击重试</string>
    <string name="cube_views_load_more_loaded_empty">数据为空</string>
    <string name="cube_views_load_more_loaded_no_more">全部数据加载完毕</string>
    <string name="cube_views_load_more_loading">加载中...</string>
    <!--刷新-->

    <!--分享-->
    <string name="cancel">取消</string>
    <!--分享文本展示-->
    <string name="share_txt_sms">短信邀请</string>
    <string name="share_txt_copy">复制链接</string>
    <string name="share_txt_email">邮件发送</string>
    <string name="share_txt_renren">校内网</string>
    <string name="share_txt_weifriend">微信朋友圈</string>
    <string name="share_txt_weichat">微信好友</string>
    <string name="share_txt_qq">QQ好友</string>
    <string name="share_txt_sina_weibo">新浪微博</string>
    <!--刷新-->


</resources>
